# nexus-sdk

./: .gitignore  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile
.github/ISSUE_TEMPLATE/: epic-template.md
.github/workflows/: cli.yml  coverage.yaml  pre-commit.yml  sdk.yml  sync_docs.yml  toolkit-rust.yml  tools.yml
.pre-commit/: .just
cli/: .just  .prettierignore  Cargo.toml
cli-wasm/: .gitignore  Cargo.toml  package.json  test.html
cli-wasm/src/: dag_validate.rs  lib.rs
cli-wasm/tests/: dag_validation.test.js
cli/src/: main.rs  prelude.rs  sui.rs
cli/src/conf/: conf_get.rs  conf_set.rs  mod.rs
cli/src/crypto/: auth.rs  crypto_auth.rs  crypto_generate_id_key.rs  crypto_init_key.rs  crypto_key_status.rs  crypto_set_passphrase.rs  mod.rs
cli/src/dag/: dag_execute.rs  dag_inspect_execution.rs  dag_publish.rs  dag_validate.rs
cli/src/dag/_dags/: encrypted_port.json  math_branching.json  math_branching_entry_group.json
cli/src/gas/: gas_expiry_buy_ticket.rs
cli/src/network/: mod.rs  network_create.rs
cli/src/secrets/: master_key.rs  mod.rs  secret.rs
cli/src/tool/: mod.rs  tool_claim_collateral.rs  tool_list.rs  tool_meta.rs  tool_register.rs  tool_register_onchain.rs  tool_unregister.rs  tool_validate.rs
cli/src/utils/secrets/: master_key.rs
docs/: CLI.md  cli.md  index.md  new-file.md  toolkit-rust  toolkit-rust.md
docs/guides/: dag-construction.md  math_branching-dag-entry.md
helpers/: npm-install-g.sh
just/: _helpers.just
sdk/: .just  Cargo.toml
sdk-wasm/: Cargo.toml  README.md  crypto_helpers.ts  package.json
sdk-wasm/src/: crypto.rs  dag_execute.rs  dag_inspect_execution.txt  dag_publish.rs  dag_validate.rs  lib.rs
sdk/src/: events.rs  lib.rs  sui.rs
sdk/src/crypto/: double_ratchet.rs  master_key.rs  mod.rs  secret_bytes.rs  session.rs  state_store.rs  x3dh.rs
sdk/src/dag/: validator.rs
sdk/src/dag/_dags/: conditional_onchain_tool.json  double_onchain_tool.json  single_onchain_tool.json
sdk/src/groth16/: circuit.rs  curve.rs  error.rs  keys.rs  mod.rs  proof.rs  srs.rs
sdk/src/groth16/ceremony/: phase1.rs  phase2.rs
sdk/src/groth16/circuits/: mod.rs  transaction_proof.rs
sdk/src/idents/: primitives.rs  workflow.rs
sdk/src/object_crawler/: fetching.rs
sdk/src/secret_core/: error.rs  mod.rs  secret.rs  traits.rs
sdk/src/test_utils/: sui_mocks.rs
sdk/src/transactions/: crypto.rs  dag.rs  tool.rs
sdk/src/types/: json_dag.rs  mod.rs  nexus_data.rs  nexus_objects.rs  prekey.rs  runtime_vertex.rs  serde_parsers.rs  serde_tracked.rs
toolkit-rust/: .just  Cargo.toml
toolkit-rust/src/: lib.rs  nexus_tool.rs  runtime.rs  serde_tracked.rs  tls_utils.rs
toolkit-rust/tests/: integration.rs
tools/exchanges-coinbase/: README.md
tools/exchanges-coinbase/src/: coinbase_client.rs  main.rs
tools/exchanges-coinbase/src/exchanges/: get_order_book.rs  get_product_candles.rs  get_product_stats.rs  get_product_ticker.rs  get_spot_price.rs  mod.rs  models.rs
tools/exchanges-coinbase/src/tools/: get_product_stats.rs
tools/http-generic/: Cargo.toml  README.md
tools/http-generic/src/: main.rs  tool.rs
tools/http-generic/src/auth/: mod.rs
tools/http-generic/src/core/: client.rs  error.rs  mod.rs  validation.rs
tools/http-generic/src/models/: input.rs  mod.rs  output.rs
tools/http-generic/src/utils/: helpers.rs  mod.rs
tools/llm-openai-chat-completion/: Cargo.toml  README.md
tools/llm-openai-chat-completion/src/: main.rs  status.rs
tools/market-coinbase/: Cargo.toml  README.md
tools/market-coinbase/src/market/: get_spot_price.rs  mod.rs  models.rs
tools/math/: README.md
tools/math/src/: main.rs
tools/math/src/i64/: add.rs  cmp.rs  mul.rs  sum.rs
tools/social/: Cargo.toml
tools/social-twitter/: Cargo.toml  README.md
tools/social-twitter/src/: auth.rs  error.rs  main.rs  twitter_client.rs
tools/social-twitter/src/direct_message/: create_group_conversation.rs  models.rs  send_message_to_group_conversation.rs
tools/social-twitter/src/list/: add_member.rs  create_list.rs  get_list.rs  get_list_members.rs  get_list_tweets.rs  mod.rs  models.rs  remove_member.rs  update_list.rs
tools/social-twitter/src/tweet/: delete_tweet.rs  get_mentioned_tweets.rs  get_tweet.rs  get_user_tweets.rs  like_tweet.rs  mentioned_tweets.rs  mod.rs  models.rs  post_tweet.rs
tools/social-twitter/src/user/: get_user_by_id.rs  get_user_by_username.rs  get_user_followers.rs  get_user_following.rs  mod.rs  models.rs
tools/social/src/: main.rs
tools/social/src/twitter/: mod.rs  models.rs  single_tweet.rs  tweet.rs
tools/walrus/: Cargo.toml
tools/walrus/src/: main.rs
tools/walrus/src/json/: mod.rs  upload_json.rs
types/: Cargo.toml
types/src/: sui.rs
