[package]
name = "nexus-toolkit"
description = "Nexus Toolkit provides a Rust framework to create new Nexus Tools."

edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
warp.workspace = true
env_logger.workspace = true
log.workspace = true
hyper-rustls.workspace = true
# TLS dependencies
rustls.workspace = true
ring.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true
pkcs8.workspace = true
rand_core.workspace = true
rand.workspace = true
sha2.workspace = true
subtle.workspace = true
# === Nexus deps ===
nexus-sdk.workspace = true

# Additional async dependencies not in workspace
tokio = { version = "1.0", features = ["full"] }
tokio-rustls.workspace = true
tokio-stream = { version = "0.1", features = ["net"] }
futures-util = { version = "0.3", features = ["sink", "std"] }


[dev-dependencies]
reqwest = { version = "0.12.14", features = ["json"] }
tokio = { version = "1.44.1", features = ["macros"] }
