[package]
name = "nexus-toolkit"
description = "Nexus Toolkit provides a Rust framework to create new Nexus Tools."

edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
env_logger.workspace = true
log.workspace = true
hyper-rustls.workspace = true
# TLS dependencies
ring.workspace = true
pkcs8.workspace = true
rand_core.workspace = true
rand.workspace = true
rustls = { version = "0.23", features = ["ring"] }
anyhow = "1"
futures-util = { version = "0.3", features = ["sink", "std"] }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
subtle = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-rustls.workspace = true
warp = "0.3"
ed25519-dalek = { version = "2.1", features = ["rand_core", "pkcs8"] }
# === Nexus deps ===
nexus-sdk.workspace = true


[dev-dependencies]
reqwest = { version = "0.12.14", features = ["json"] }
tokio = { version = "1.44.1", features = ["macros"] }
tempfile = "3.8"
rustls = { version = "0.23", features = ["ring"] }
serial_test = "3.0"
