[package]
name = "http-generic"
description = "Generic HTTP client tool for any API integration with Nexus"

edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest = { workspace = true, features = ["json", "multipart"] }
serde_json.workspace = true
serde.workspace = true
schemars.workspace = true
jsonschema.workspace = true
base64.workspace = true

# === Nexus deps ===
nexus-toolkit.workspace = true
nexus-sdk.workspace = true

[dev-dependencies]
mockito.workspace = true